--- a/view_results/up.html
+++ b/view_results/up.html
@@ -55,9 +55,8 @@
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#jayhorn"><h3 id="bench" class="title text-center"><span>JayHorn</span></h3></a></li>
       <li class=""><a data-toggle="tab" href="#cbmc"><h3 id="bench" class="title text-center"><span>CBMC</span></h3></a></li>
-      <li class=""><a data-toggle="tab" href="#cpachecker"><h3 id="bench" class="title text-center"><span>CPAChecker</span></h3></a></li>
+      <li class=""><a data-toggle="tab" href="#cpa"><h3 id="bench" class="title text-center"><span>CPAChecker</span></h3></a></li>
       <li class=""><a data-toggle="tab" href="#infer"><h3 id="bench" class="title text-center"><span>Infer</span></h3></a></li>
     </ul>
       <div class="tab-content">
-          <div id="jayhorn" class="tab-pane active">
-            <table class="table">
+
